Nuevos cambios terminados

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="6VnfNCFfJawNMz_T6NPEM_gKj5oVnsG02leUOasbfoE" />
-    <meta name="description" content="Pagina web oficial del guitarrista clasico Jonathan Esteve Aranda">
+    <meta name="description" content="Página web oficial del guitarrista clásico Jonathan Esteve Aranda">
     <!-- Control the behavior of search engine crawling and indexing -->
     <meta name="robots" content="index,follow"><!-- All Search Engines -->
     <title>Jonathan-project</title>
@@ -50,41 +50,38 @@
         <div class="inicioImg">
             <img src="./assets/images/foto1.jpg" class="klanimate" data-x="-100" alt="Imagen Jonathan Esteve Aranda">
         </div>
-            <h1 id="titleBiografia" class="text-center title klanimate" data-y="-100">Biografía</h1>
-            <p id="biop1" class="klanimate p-bio-desc" data-x="100">Ganador del Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018 (Primer Premio) 
-                y tras haber obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos 
-                como el Francisco Tárrega de Benicássim, Concurso de música de Benidorm entre otros…Jonathan Esteve Aranda 
-                se sitúa actualmente como uno de los más destacados guitarristas clásicos de su generación.</p>
-            <p id="biop2" class="klanimate p-bio-desc" data-x="-100">Su talento, versatilidad y dominio de los diferentes periodos del repertorio para guitarra clásica, 
-                lo convierten en un músico que toca con una personalidad muy destacada y definida, ligada siempre a 
-                una amplia técnica que ofrece grandes posibilidades sonoras. Su guitarra ha sonado en países Europeos 
-                como España, Francia, Reino Unido…Entre otras, se presenta en importantes salas como: Palacio de ferias y 
-                congresos de Málaga, Teatro Arniches, Auditorio Andrés Gaos, Teatro Concha Segura en España, St Olave Hart Street 
-                (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
-            <p id="biop3" class="klanimate p-bio-desc" data-x="100">En 2015, destaca su interpretación y grabación en directo del famoso “Concierto de Aranjuez” junto con la orquesta 
-                sinfónica Castelar. Ha trabajado y compartido escenario con directores de renombre mundial como José Luis Granados, 
-                Rafael Vilaplana o Salvador Brotons.</p>
-            <p id="biop4" class="klanimate p-bio-desc" data-x="-100">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair de Málaga 
-                (2014), XXVIII Curso Internacional de Música de Benidorm, Festival internacional andaluz de Saint-Jean de Luz (Francia). 
-                Su iniciativa para organizar eventos relacionados con el mundo de la guitarra, le llevan a crear el Certamen de guitarra 
-                clásica “Ciudad de Castalla” del cual es promotor y director.</p>
-            <p id="biop5" class="klanimate p-bio-desc" data-x="100">Jonathan Esteve nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert, Victor Bravo y Antonio 
-                Clavel en los conservatorios de Villena y Oscar Esplá en Alicante, obtiene el título superior en guitarra con Matrícula 
-                de Honor. Guitarristas como Carles Trepat, Aniello Desiderio, Carlos Bonell… han reconocido y admirado su forma de tocar.</p>
+        <h1 id="titleBiografia" class="text-center title klanimate" data-y="-100">Biografía</h1>
+        <p id="biop1" class="klanimate p-bio-desc" data-x="100">Ganador del Concurso Internacional de Guitarra Clásica Ángel G.Piñero 2018 (Primer Premio) y tras haber
+            obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos como el LI Certamen
+            Internacional Francisco Tárrega de Benicàssim, XVII Concurso de música de Benidorm entre otros…
+            Jonathan Esteve Aranda se sitúa actualmente como uno de los guitarristas clásicos más destacados de su generación.</p>
+        <p id="biop2" class="klanimate p-bio-desc" data-x="-100">Su talento, versatilidad y dominio de los diferentes periodos que componen el repertorio para guitarra, lo
+            convierten en un músico que toca con una personalidad muy destacada, definida, ligada siempre a una
+            amplia técnica. Su guitarra ha sonado en países Europeos como España, Francia, Reino Unido…Entre otras,
+            se presenta en importantes salas: Palacio de ferias y congresos de Málaga, Teatro Arniches, Auditorio
+            Andrés Gaos, Teatro Concha Segura en España, St Olave Hart Street (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
+        <p id="biop3" class="klanimate p-bio-desc" data-x="100">En 2015, destaca su interpretación y grabación en directo del “Concierto de Aranjuez” junto con la
+            Orquesta sinfónica Castelar. Ha trabajado y compartido escenario con directores de renombre mundial
+            como José Luis Granados, Rafael Vilaplana o Salvador Brotons.</p>
+        <p id="biop4" class="klanimate p-bio-desc" data-x="-100">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair
+            de Málaga (2014) XXVIII Curso Internacional de Música de Benidorm, Festival internacional andaluz de
+            Saint-Jean de Luz (Francia). Su iniciativa para organizar eventos relacionados con el mundo de la guitarra, le
+            llevan a crear el Certamen de guitarra clásica “Ciudad de Castalla” del cual es promotor y director.</p>
+        <p id="biop5" class="klanimate p-bio-desc" data-x="100">Jonathan Esteve Aranda nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert,
+            Victor Bravo y Antonio Clavel en los conservatorios de Villena y Oscar Esplá de Alicante, obtiene el título
+            superior en guitarra con Matrícula de Honor. Maestros como Carles Trepat, Aniello Desiderio, Carlos
+            Bonell… han admirado su forma de interpretar y entender la música. Toca con una guitarra diseñada y
+            construida por el mismo, de forma autodidacta.</p>
     </div>
 
     <div class="container">
         <div id="galeria" class="galeria col-1-2 row-2">
             <h1 id="titleGaleria" class="text-center title klanimate" data-y="100">Galeria</h1>
             <div class="galleria">
-                <img src="./assets/images/galeria/1-min.jpg" alt="">
-                <img src="./assets/images/galeria/3-min.jpg" alt="">
                 <img src="./assets/images/galeria/4-min.jpg" alt="">
-                <img src="./assets/images/galeria/5-min.jpg" alt="">
                 <img src="./assets/images/galeria/6-min.jpg" alt="">
                 <img src="./assets/images/galeria/7-min.jpg" alt="">
                 <img src="./assets/images/galeria/8-min.jpg" alt="">
-                <img src="./assets/images/galeria/9-min.jpg" alt="">
                 <img src="./assets/images/galeria/10-min.jpg" alt="">
                 <img src="./assets/images/galeria/11-min.jpg" alt="">
                 <img src="./assets/images/galeria/12-min.jpg" alt="">
@@ -115,12 +112,12 @@
                 allowfullscreen>
                 </iframe>
             </div>
-            <h1 class="text-center klanimate" data-x="100">Danza Paraguaya Guaraní by Agustín Barrios Mangoré</h1>
+            <h1 class="text-center klanimate" data-x="100">Guitar recital in London</h1>
             <div class="container-video klanimate" data-x="-100">
                 <iframe 
                 width="560" 
                 height="315"
-                src="https://www.youtube.com/embed/cAq9EN8XTxQ" 
+                src="https://www.youtube.com/embed/F908PSq1y-o" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
@@ -134,7 +131,7 @@
             <img id="imgFace" src="./assets/icons/icons8-facebook-nuevo-100.png" class="klanimate" data-x="100" alt="">
             <a href="https://www.facebook.com/Jonathan-Esteve-Aranda-Classical-Guitarist-1410717555869368/" target="_blank">Jonathan Esteve Aranda</a>
         </div>
-        <div class="agendaImg row-4 klanimate" data-x="100"><img src="./assets/images/foto2.jpg" alt=""></div>
+        <div class="agendaImg row-4 klanimate" data-x="100"><img src="./assets/images/foto2.png" alt=""></div>
         <div class="contactoImg row-5"><img src="./assets/images/foto4.jpg" alt=""></div>
         <div id="contacto" class="contacto row-5">
             <h1 id="titleContacto" class="text-center title klanimate" data-y="-100">Contacto y Redes</h1>
