Modificado el titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Página web oficial del guitarrista clásico Jonathan Esteve Aranda">
     <!-- Control the behavior of search engine crawling and indexing -->
     <meta name="robots" content="index,follow"><!-- All Search Engines -->
-    <title>Jonathan-project</title>
+    <title>Jonathan Esteve Aranda</title>
     <link rel="icon" type="image/png" href="./assets/icons/icons8-guitarra-128.png" />
     <link rel="stylesheet" href="./assets/style-min.css">
 </head>
