--- a/index.html
+++ b/index.html
@@ -51,27 +51,30 @@
             <img src="./assets/images/foto1.jpg" class="klanimate" data-x="-100" alt="Imagen Jonathan Esteve Aranda">
         </div>
         <h1 id="titleBiografia" class="text-center title klanimate" data-y="-100">Biografía</h1>
-        <p id="biop1" class="klanimate p-bio-desc" data-x="100">Ganador del Concurso Internacional de Guitarra Clásica Ángel G.Piñero 2018 (Primer Premio) y tras haber
-            obtenido más de 10 premios nacionales e internacionales en prestigiosos concursos como el LI Certamen
-            Internacional Francisco Tárrega de Benicàssim, XVII Concurso de música de Benidorm entre otros…
-            Jonathan Esteve Aranda se sitúa actualmente como uno de los guitarristas clásicos más destacados de su generación.</p>
-        <p id="biop2" class="klanimate p-bio-desc" data-x="-100">Su talento, versatilidad y dominio de los diferentes periodos que componen el repertorio para guitarra, lo
-            convierten en un músico que toca con una personalidad muy destacada, definida, ligada siempre a una
-            amplia técnica. Su guitarra ha sonado en países Europeos como España, Francia, Reino Unido…Entre otras,
-            se presenta en importantes salas: Palacio de ferias y congresos de Málaga, Teatro Arniches, Auditorio
-            Andrés Gaos, Teatro Concha Segura en España, St Olave Hart Street (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
-        <p id="biop3" class="klanimate p-bio-desc" data-x="100">En 2015, destaca su interpretación y grabación en directo del “Concierto de Aranjuez” junto con la
-            Orquesta sinfónica Castelar. Ha trabajado y compartido escenario con directores de renombre mundial
-            como José Luis Granados, Rafael Vilaplana o Salvador Brotons.</p>
-        <p id="biop4" class="klanimate p-bio-desc" data-x="-100">Frecuentemente, es invitado como concertista y profesor en importantes citas internacionales: Guitar Fair
-            de Málaga (2014) XXVIII Curso Internacional de Música de Benidorm, Festival internacional andaluz de
-            Saint-Jean de Luz (Francia). Su iniciativa para organizar eventos relacionados con el mundo de la guitarra, le
-            llevan a crear el Certamen de guitarra clásica “Ciudad de Castalla” del cual es promotor y director.</p>
-        <p id="biop5" class="klanimate p-bio-desc" data-x="100">Jonathan Esteve Aranda nace en Castalla (Alicante-España). Formado con los maestros Francisco Albert,
-            Victor Bravo y Antonio Clavel en los conservatorios de Villena y Oscar Esplá de Alicante, obtiene el título
-            superior en guitarra con Matrícula de Honor. Maestros como Carles Trepat, Aniello Desiderio, Carlos
-            Bonell… han admirado su forma de interpretar y entender la música. Toca con una guitarra diseñada y
-            construida por el mismo, de forma autodidacta.</p>
+        <p id="biop1" class="klanimate p-bio-desc" data-x="100">Primer premio en el V Concurso Internacional de Guitarra Clásica 
+            Ángel G. Piñero 2018, Premio al mejor guitarrista español nacido en la comunidad valenciana en el LI Certamen Internacional 
+            Francisco Tárrega de Benicássim 2017, Segundo Premio en el XVII Concurso Internacional de Música de Benidorm 2015, 
+            y tras haber obtenido hasta la fecha más de 10 premios nacionales e internacionales…Jonathan Esteve Aranda se sitúa 
+            actualmente como uno de los guitarristas más destacados de su generación.</p>
+        <p id="biop2" class="klanimate p-bio-desc" data-x="-100">Demostrando en sus conciertos versatilidad, conocimiento y dominio 
+            de los diferentes periodos del repertorio, son cualidades que hacen de él un músico con gran personalidad acompañada 
+            de una amplia y consolidada técnica. Su guitarra, ha sonado en países Europeos como Francia, España, Reino Unido… 
+            presentándose en capitales cómo Lóndres o Madrid entre otras. Ha tocado en importantes salas cómo: Fundación Carlos 
+            de Amberes en Madrid, ADDA Concert Hall de Alicante, Palacio de ferias y congresos de Málaga, Teatro Pedro Muñoz Seca, 
+            Auditorio Andrés Gaos, Teatro Concha Segura, St Olave Hart Street (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)… </p>
+        <p id="biop3" class="klanimate p-bio-desc" data-x="100">Destacan sus conciertos con orquesta sinfónica, teniendo lugar 
+            el primero de ellos en el año 2015, donde interpretó con gran éxito el concierto de Aranjuez de Joaquín Rodrigo. 
+            Ha trabajado y compartido escenario con directores de renombre mundial como José Luis Granados, Rafael Vilaplana o 
+            Salvador Brotons.</p>
+        <p id="biop4" class="klanimate p-bio-desc" data-x="-100">Frecuentemente, es invitado como concertista y profesor en 
+            importantes citas internacionales: Guitar Fair de Málaga 2014, XXVIII Curso Internacional de Música de Benidorm, 
+            Festival internacional andaluz de Saint-Jean de Luz (Francia). Su iniciativa para organizar eventos relacionados 
+            con el mundo de la guitarra, le llevan a crear el certamen de guitarra clásica “Ciudad de Castalla” del cual es 
+            director.</p>
+        <p id="biop5" class="klanimate p-bio-desc" data-x="100">Jonathan Esteve nace en Castalla (Alicante-España). 
+            Formado con los maestros Francisco Albert, Victor Bravo y Antonio Clavel en los conservatorios de Villena 
+            y Oscar Esplá en Alicante, completa los estudios superiores en guitarra con Matrícula de Honor. 
+            Paralelamente complementa su formación con guitarristas cómo Carles Trepat y Carlos Bonell.</p>
     </div>
 
     <div class="container">
