new youtube channel

--- a/index.html
+++ b/index.html
@@ -93,36 +93,25 @@
         </div>
         <div id="videos" class="videos col-1-2 row-3">
             <h1 id="titleVideos" class="text-center title klanimate" data-y="-100">Vídeos</h1>
-            <h1 id="first-video" class="text-center first-title-video klanimate" data-x="100">Rosita Polka by Francisco Tárrega</h1>
+            <h1 id="first-video" class="text-center first-title-video klanimate" data-x="100">Lágrima-Preludio by Francisco Tárrega Guitar, Jonathan Esteve</h1>
             <div class="container-video klanimate" data-x="-100">
                 <iframe 
                 width="560" 
-                height="315"
-                src="https://www.youtube.com/embed/AhH2NUB-u14" 
+                height="315" 
+                src="https://www.youtube.com/embed/6Rg9vj6yBJ4" 
                 frameborder="0" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
-                </iframe>
+            </iframe>                
             </div>
-            <h1 class="text-center klanimate" data-x="100">Allegro BWV 1003 by J.S.Bach Sonata nº2</h1>
+            <h1 class="text-center klanimate" data-x="100">Gran jota de concierto-Francisco Tárrega</h1>
             <div class="container-video klanimate" data-x="-100">
                 <iframe 
                 width="560" 
                 height="315"
-                src="https://www.youtube.com/embed/nJL08qC3fY4" 
+                src="https://www.youtube.com/embed/5JsFE08pH54" 
                 frameborder="0" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-                </iframe>
-            </div>
-            <h1 class="text-center klanimate" data-x="100">Guitar recital in London</h1>
-            <div class="container-video klanimate" data-x="-100">
-                <iframe 
-                width="560" 
-                height="315"
-                src="https://www.youtube.com/embed/F908PSq1y-o" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
                 </iframe>
             </div>
@@ -141,7 +130,7 @@
             <div class="contacto-grid">
                 <img src="./assets/icons/icons8-gmail-100.png" class="icon-gmail klanimate" data-x="-100" data-delay="0" alt=""><a href="mailto:Jonathan_esteveguitar@hotmail.com" class="klanimate" data-x="100" data-delay="0">Jonathan_esteveguitar@hotmail.com</a>
                 <img src="./assets/icons/icons8-facebook-160.png" class="klanimate" data-x="-100" data-delay="0.5" alt=""><a href="https://www.facebook.com/jonathan.estevearanda" class="klanimate" data-x="100" data-delay="0.5" target="_blank">Jonathan Esteve Aranda</a>
-                <img src="./assets/icons/icons8-youtube-96.png" class="klanimate" data-x="-100" data-delay="1" alt=""><a href="https://www.youtube.com/channel/UCF3VzTUjZsOYLJ_ExOnZdaw" class="klanimate" data-x="100" data-delay="1" target="_blank">Jonathan Esteve Aranda</a>
+                <img src="./assets/icons/icons8-youtube-96.png" class="klanimate" data-x="-100" data-delay="1" alt=""><a href="https://www.youtube.com/channel/UCBJtEd3jzDqfO-zzKCASIhg" class="klanimate" data-x="100" data-delay="1" target="_blank">Jonathan Esteve Aranda</a>
                 <img src="./assets/icons/logo-clasicaguitarra.png" class="icon-clasicaguitarra klanimate" data-x="-100" data-delay="1.5" alt=""><a href="https://clasicaguitarra.com/#/perfil/5ce5995f41dd1600179f40e1" class="klanimate" data-x="100" data-delay="1.5" target="_blank">Jonathan Esteve Aranda</a>
             </div>
         </div>
