--- a/index.html
+++ b/index.html
@@ -51,31 +51,28 @@
             <img src="./assets/images/foto1.jpg" class="klanimate" data-x="-100" alt="Imagen Jonathan Esteve Aranda">
         </div>
         <h1 id="titleBiografia" class="text-center title klanimate" data-y="-100">Biografía</h1>
-        <p id="biop1" class="klanimate p-bio-desc" data-x="100">Galardonado con más de 10 premios nacionales e internacionales, 
-            Primer premio en el V Concurso Internacional de Guitarra Clásica Ángel G. Piñero 2018, Premio al mejor guitarrista español 
-            nacido en la comunidad valenciana en el LI Certamen Internacional Francisco Tárrega de Benicássim 2017, Segundo Premio 
-            en el XVII Concurso Internacional de Música de Benidorm 2015… Jonathan Esteve Aranda se sitúa actualmente como uno de 
-            los guitarristas más destacados de su generación.</p>
-        <p id="biop2" class="klanimate p-bio-desc" data-x="-100">Demostrando en sus conciertos versatilidad, conocimiento y dominio de 
-            los diferentes periodos del repertorio, cualidades que hacen de él un músico con gran personalidad, acompañada de una amplia 
-            y consolidada técnica. Su guitarra, ha sonado en países Europeos como Francia, España, Reino Unido…presentándose en 
-            capitales cómo Lóndres o Madrid entre otras. Ha tocado en importantes salas cómo: Fundación Carlos de Amberes en Madrid, 
-            ADDA Concert Hall de Alicante, Palacio de ferias y congresos de Málaga, Teatro Pedro Muñoz Seca, Auditorio Andrés Gaos, 
-            Teatro Concha Segura, St Olave Hart Street (Londres-Inglaterra) Auditorio Maurice Ravel (Francia)…</p>
-        <p id="biop3" class="klanimate p-bio-desc" data-x="100">Destacan sus conciertos con orquesta sinfónica, teniendo lugar el 
-            primero de ellos en el año 2015, donde interpretó con gran éxito el Concierto de Aranjuez de Joaquín Rodrigo. 
-            Ha trabajado y compartido escenario con directores de renombre mundial como José Luis Granados, Rafael Vilaplana 
-            o Salvador Brotons.</p>
-        <p id="biop4" class="klanimate p-bio-desc" data-x="-100">Frecuentemente, es invitado como concertista y profesor en 
-            importantes citas internacionales: Guitar Fair de Málaga 2014, XXVIII Curso Internacional de Música de Benidorm, 
-            Festival internacional andaluz de Saint-Jean de Luz (Francia). Su iniciativa para organizar eventos relacionados 
-            con el mundo de la guitarra, le llevan a crear el certamen de guitarra clásica “Ciudad de Castalla” del cual es director.</p>
-        <p id="biop5" class="klanimate p-bio-desc" data-x="100">Jonathan Esteve nace en Castalla (Alicante-España). 
-            Formado con los maestros Francisco Albert, Victor Bravo y Antonio Clavel en los conservatorios de Villena 
-            y Oscar Esplá en Alicante, completa los estudios superiores en guitarra con Matrícula de Honor. Paralela y 
-            posteriormente complementó su formación con guitarristas cómo Carles Trepat y Carlos Bonell. Entre otras 
-            facetas, se distingue entre los guitarristas jóvenes en la élite, por ser el único que toca con una guitarra 
-            construida por él mismo de manera autodidacta.</p>
+        <p id="biop1" class="klanimate p-bio-desc" data-x="100">Galardonado con más de 10 premios nacionales e internacionales, entre otros, 
+            Primer premio en el V Concurso Internacional de Guitarra Clásica Ángel. G. Piñero 2018, Premio al mejor guitarrista español nacido 
+            en la comunidad valenciana en el LI Certamen Internacional Francisco Tárrega de Benicàssim 2017, Segundo Premio en el XVII Concurso 
+            Internacional de música de Benidorm 2015, y tras haber sido finalista en concursos como el Andrés Segovia de Linares... 
+            Jonathan Esteve se sitúa actualmente entre los guitarristas más destacados de su generación.</p>
+        <p id="biop2" class="klanimate p-bio-desc" data-x="-100">En sus conciertos, demuestra versatilidad, técnica y dominio de los diferentes periodos 
+            del repertorio clásico. Sin duda, estas son cualidades que hacen de él un músico con una gran personalidad y conexión con el público. 
+            Su guitarra, ha sonado en países Europeos como Francia, España, Reino Unido...presentándose en capitales como Madrid o Londres, entre otras 
+            ciudades. A tocado en importantes salas como la Fundación Carlos de Amberes en Madrid, ADDA Concert Hall de Alicante, Palacio de ferias y 
+            congresos de Málaga, Teatro Pedro Muñoz Seca, Auditorio Andrés Gaos en A Coruña, Teatro Concha Segura, St. Olave Hart Street (Londres- Inglaterra) 
+            Auditorio Maurice Ravel (S. Juan de Luz-Francia)</p>
+        <p id="biop3" class="klanimate p-bio-desc" data-x="100">Destacan sus conciertos con orquesta sinfónica, teniendo lugar el primero de ellos en el año 2015, 
+            donde interpretó con gran éxito el Concierto de Aranjuez. Ha trabajado y compartido escenario con directores de talla mundial como José Luis Granados, 
+            Rafael Vilaplana o Salvador Brotons. Es invitado como concertista y profesor en citas internacionales como el Guitar Fair de Málaga en 2014, XXVIII 
+            Curso de Música de Benidorm, el festival Andaluz de Saint Jean de Luz en Francia. Su iniciativa e inquietudes para crear eventos relacionados con 
+            el mundo de la música, le llevan a poner en marcha en el año 2013 el certamen de guitarra Ciudad de Castalla, del cual es director.</p>
+        <p id="biop4" class="klanimate p-bio-desc" data-x="-100">Jonathan Esteve nace en Castalla (Alicante-España). Formado con los profesores Francisco Albert, 
+            Victor Bravo y Antonio Clavel en los conservatorios de Villena y CSMA Oscar Esplá de Alicante, completa los estudios superiores en guitarra con matrícula 
+            de honor. Paralela y posteriormente, complementó su formación con los maestros Carles Trepat y Carlos Bonell.</p>
+        <p id="biop5" class="klanimate p-bio-desc" data-x="100">Entre otras facetas, cabe destacar que Jonathan es el único guitarrista profesional de su generación, 
+            que toca con una guitarra construida por él mismo de manera autodidacta. Ha fabricado más de 25 instrumentos hasta la fecha, compaginando esta preciosa 
+            labor con su principal actividad como intérprete. Actualmente, Jonathan está patrocinado por la marca de cuerdas "RC Strings".</p>
     </div>
 
     <div class="container">
